--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -6,6 +6,8 @@ en:
       confirmed: "Your account was successfully confirmed."
       send_instructions: "You will receive an email with instructions about how to confirm your account in a few minutes."
       send_paranoid_instructions: "If your email address exists in our database, you will receive an email with instructions about how to confirm your account in a few minutes."
+      title: "Resend confirmation instructions"
+      submit_button: "Resend confirmation instructions"
     failure:
       already_authenticated: "You are already signed in."
       inactive: "Your account is not activated yet."
@@ -32,6 +34,12 @@ en:
       send_paranoid_instructions: "If your email address exists in our database, you will receive a password recovery link at your email address in a few minutes."
       updated: "Your password was changed successfully. You are now signed in."
       updated_not_active: "Your password was changed successfully."
+      edit_title: "Change your password"
+      new_password: "New password"
+      confirm_your_new_password: "Confirm your new password"
+      change_my_password: "Change my password"
+      send_instructions_button: "Send me reset password instructions"
+      new_title: "Forgot your password?"
     registrations:
       destroyed: "Bye! Your account was successfully cancelled. We hope to see you again soon."
       signed_up: "Welcome! You have signed up successfully."
@@ -40,13 +48,31 @@ en:
       signed_up_but_unconfirmed: "A message with a confirmation link has been sent to your email address. Please open the link to activate your account."
       update_needs_confirmation: "You updated your account successfully, but we need to verify your new email address. Please check your email and click on the confirm link to finalize confirming your new email address."
       updated: "You updated your account successfully."
+      edit_title: "Edit your account"
+      leave_password_blank: "leave it blank if you don't want to change it"
+      need_current_password: "we need your current password to confirm your changes"
+      cancel_account: "Cancel my account"
+      new_title: "Sign up"
+      sign_up_button: "Sign up"
     sessions:
       signed_in: "Signed in successfully."
       signed_out: "Signed out successfully."
+      new_title: "Sign in"
+      sign_in_button: "Sign in"
     unlocks:
       send_instructions: "You will receive an email with instructions about how to unlock your account in a few minutes."
       send_paranoid_instructions: "If your account exists, you will receive an email with instructions about how to unlock it in a few minutes."
       unlocked: "Your account has been unlocked successfully. Please sign in to continue."
+      title: "Resend unlock instructions"
+      submit_button: "Resend unlock instructions"
+    shared:
+      links:
+        sign_in: "Sign in"
+        sign_up: "Sign up"
+        forgot_password: "Forgot your password?"
+        didnt_receive_confirmation_instructions: "Didn't receive confirmation instructions?"
+        didnt_receive_unlock_instructions: "Didn't receive unlock instructions?"
+        sign_in_with: Sign in with %{provider}
   errors:
     messages:
       already_confirmed: "was already confirmed, please try signing in"
