--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -90,3 +90,6 @@ en:
       profile: "Profile"
       logout: "Logout"
       toggle_navigation: "Toggle navigation"
+  devise:
+    registrations:
+      cancel_account: "Cancel my account"
