--- a/doc/slides/2014-03-10_2_Testy.md
+++ b/doc/slides/2014-03-10_2_Testy.md
@@ -94,9 +94,13 @@ end
 
 **Na brązowy rubin:**
 
+Dodaj testy do akcji `update` i `destroy` kontrolera events
 
 **Na srebrny rubin:**
 
+Dodaj testy walidacji wszystkich modeli
 
 **Na złoty rubin:**
+
+Dodaj test do  kontrolera friends (`create`, `update`) który sprawdzi przypisywanie i usuwanie przypisywania frienda do odpowiednich grup
 
