--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -31,6 +31,8 @@ pl:
           attributes:
             base:
               invalid_dates_order: Nieprawidłowa kolejność dat
+            attendees_min_count:
+              cant_be_greater_then_attendees_min_count: nie może być większy niż górny limit
         friend:
           attributes:
             base:
